// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders study Cavatica projects view -- empty view for regular user 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <button
          class="ui tiny basic icon button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic very padded segment ui container"
  >
    <h2
      class="ui disabled center aligned header"
    >
      <i
        aria-hidden="true"
        class="clock outline icon"
      />
      Coming Soon...
    </h2>
  </div>
</div>
`;

exports[`renders study Cavatica projects view -- shows an error 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <button
          class="ui tiny basic icon button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic segment ui container"
  >
    <div
      class="ui icon negative message"
    >
      <i
        aria-hidden="true"
        class="warning circle icon"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          Error
        </div>
        <p>
          Project Error: 
          Network error: Failed to get the Cavatica project data for this study
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study Cavatica projects view correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <div
          class="ui placeholder"
        >
          <div
            class="header"
          >
            <div
              class="line"
            />
            <div
              class="line"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui placeholder"
    >
      <div
        class="image header"
      >
        <div
          class="line"
        />
        <div
          class="line"
        />
      </div>
      <div
        class="paragraph"
      >
        <div
          class="line"
        />
        <div
          class="line"
        />
        <div
          class="line"
        />
        <div
          class="line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study Cavatica projects view correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <button
          class="ui tiny basic icon button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <button
      class="ui mini primary right floated button"
    >
      <i
        aria-hidden="true"
        class="linkify icon"
      />
      LINK PROJECT
    </button>
    <button
      class="ui mini basic primary right floated button"
    >
      <i
        aria-hidden="true"
        class="add icon"
      />
      NEW PROJECT
    </button>
    <h2
      class="ui header noMargin"
    >
      Cavatica Projects
    </h2>
    <div
      class="ui divided relaxed list"
      role="list"
    >
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="paper plane outline icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06"
            target="_blank"
          >
            test study name 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:41.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-bwa-mem"
            target="_blank"
          >
            test study name bwa-mem 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:42.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              bwa_mem
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-bwa-mem
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-gatk-haplotypecaller"
            target="_blank"
          >
            test study name gatk-haplotypecaller 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:43.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              gatk_haplotypecaller
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-gatk-haplotypecaller
              </code>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study Cavatica projects view correctly 3`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <button
          class="ui tiny basic icon button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <button
      class="ui mini primary right floated button"
    >
      <i
        aria-hidden="true"
        class="linkify icon"
      />
      LINK PROJECT
    </button>
    <button
      class="ui mini basic primary right floated button"
    >
      <i
        aria-hidden="true"
        class="add icon"
      />
      NEW PROJECT
    </button>
    <h2
      class="ui header noMargin"
    >
      Cavatica Projects
    </h2>
    <div
      class="ui divided relaxed list"
      role="list"
    >
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="paper plane outline icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06"
            target="_blank"
          >
            test study name 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:41.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-bwa-mem"
            target="_blank"
          >
            test study name bwa-mem 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:42.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              bwa_mem
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-bwa-mem
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-gatk-haplotypecaller"
            target="_blank"
          >
            test study name gatk-haplotypecaller 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:43.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              gatk_haplotypecaller
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-gatk-haplotypecaller
              </code>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study Cavatica projects view correctly 4`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <button
          class="ui tiny basic icon button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <button
      class="ui mini primary right floated button"
    >
      <i
        aria-hidden="true"
        class="linkify icon"
      />
      LINK PROJECT
    </button>
    <button
      class="ui mini basic primary right floated button"
    >
      <i
        aria-hidden="true"
        class="add icon"
      />
      NEW PROJECT
    </button>
    <h2
      class="ui header noMargin"
    >
      Cavatica Projects
    </h2>
    <div
      class="ui divided relaxed list"
      role="list"
    >
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="paper plane outline icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06"
            target="_blank"
          >
            test study name 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:41.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-bwa-mem"
            target="_blank"
          >
            test study name bwa-mem 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:42.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              bwa_mem
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-bwa-mem
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-gatk-haplotypecaller"
            target="_blank"
          >
            test study name gatk-haplotypecaller 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:43.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              gatk_haplotypecaller
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-gatk-haplotypecaller
              </code>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study Cavatica projects view correctly 5`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          benchmark extensible e-business
        </h1>
        <button
          class="ui tiny basic icon button"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          SD_8WX8QQ06
        </button>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basic-info/info"
        >
          Basic Info
          <div
            class="ui blue mini label"
          >
            BETA
          </div>
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          aria-current="page"
          class="active item active"
          href="/study/SD_8WX8QQ06/cavatica"
        >
          Cavatica
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/logs"
        >
          Logs
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <button
      class="ui mini primary right floated button"
    >
      <i
        aria-hidden="true"
        class="linkify icon"
      />
      LINK PROJECT
    </button>
    <button
      class="ui mini basic primary right floated button"
    >
      <i
        aria-hidden="true"
        class="add icon"
      />
      NEW PROJECT
    </button>
    <h2
      class="ui header noMargin"
    >
      Cavatica Projects
    </h2>
    <div
      class="ui divided relaxed list"
      role="list"
    >
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="paper plane outline icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06"
            target="_blank"
          >
            test study name 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:41.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-bwa-mem"
            target="_blank"
          >
            test study name bwa-mem 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:42.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              bwa_mem
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-bwa-mem
              </code>
            </div>
          </div>
        </div>
      </div>
      <div
        class="item"
        role="listitem"
      >
        <div
          class="right floated content"
        >
          <button
            class="ui mini basic primary right floated button"
          >
            <i
              aria-hidden="true"
              class="pencil icon"
            />
            EDIT
          </button>
          <button
            class="ui mini basic negative right floated button ml-10"
          >
            <i
              aria-hidden="true"
              class="unlink icon"
            />
            UNLINK
          </button>
        </div>
        <i
          aria-hidden="true"
          class="sliders horizontal icon"
        />
        <div
          class="content"
        >
          <a
            class="header"
            href="https://cavatica.sbgenomics.com/u/zhux3/sd-8wx8qq06-gatk-haplotypecaller"
            target="_blank"
          >
            test study name gatk-haplotypecaller 
            <i
              aria-hidden="true"
              class="external small link icon"
            />
          </a>
          <div
            class="ui bulleted horizontal list"
            role="list"
          >
            <div
              class="item"
              role="listitem"
            >
              Created
               by zhux3 
              <time
                datetime="2019-08-26T18:22:43.000Z"
                title="26 Aug 2019"
              >
                4 months from now
              </time>
            </div>
            <div
              class="item"
              role="listitem"
            >
              gatk_haplotypecaller
            </div>
            <div
              class="item"
              role="listitem"
            >
              <code>
                zhux3/sd-8wx8qq06-gatk-haplotypecaller
              </code>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
